--- a/greetings.html
+++ b/greetings.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -11,9 +11,9 @@
           //promot()is a function that collects user input
       console.log("Hi " + username + "!");
       // console.log() is a print function
+      // + is a symbol for string concatenation  
       document.write("Hi " + username + "!");
-
+        // document.write() is a function that prints to the webpage
     </script>
-
   </body>
 </html>
